# backlog-boss

./: .dockerignore  .gitignore  Dockerfile  README.md  backlog-boss.code-workspace  docker-compose.yaml
backend/: .env.sample  README.md  export_openapi.py  main.py  pyproject.toml
backend/app/: http_client.py  settings.py  timing.py
backend/app/database/: engine.py  models.py
backend/app/features/: api_model.py
backend/app/features/auth/: auth_router.py  auth_with_steam_handler.py  get_current_user.py  logout_handler.py  steam_callback_handler.py
backend/app/features/backlog_game/: backlog_game_router.py  update_backlog_game_handler.py
backend/app/features/game/: __init__.py  create_my_backlog_command.py  game_router.py  igdb_client.py  persist_igdb_games.py  search_games_handler.py  steam_client.py
backend/app/features/health/: get_liveness_handler.py  get_readiness_handler.py  health_router.py
backend/app/features/user/: create_my_backlog_command.py  create_my_backlog_handler.py  get_me_handler.py  get_me_query.py  get_my_backlog_handler.py  get_my_backlog_query.py  user_router.py
backend/app/infrastructure/: igdb_client.py  steam_client.py
backend/app/pages/: home.py
backend/notebooks/: igdb_playground.ipynb
backend/static/: keep.html
backend/templates/: base.html
backend/templates/nested/: test.html
backend/tests/: conftest.py
backend/tests/database/: test_database_isolation.py  test_testcontainers_scaffold.py
backend/tests/features/auth/: test_auth_with_steam_handler.py  test_logout_handler.py  test_steam_callback_handler.py
backend/tests/features/game/: test_igdb_client.py  test_search_games_handler.py  test_steam_client.py  test_update_backlog_game_handler.py
backend/tests/features/health/: test_get_liveness_handler.py  test_get_readiness_handler.py
backend/tests/infrastructure/: test_igdb_client.py  test_steam_client.py
(+73 files in other folders)
